--- a/index.html
+++ b/index.html
@@ -2,14 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Hack Club CSS Starter Template</title>
-    <link rel="stylesheet" href="https://css.hackclub.com/theme.css" />
+    <title>Css testing</title>
     <link rel="stylesheet" href="style.css" />
-
-    <meta property="og:title" content="Hack Club CSS Starter Template" />
-    <meta name="twitter:title" content="Hack Club CSS Starter Template" />
-    <meta name="description" content="Hack Club CSS Starter Template" />
-    <meta property="og:description" content="Hack Club CSS Starter Template" />
-    <meta name="twitter:description" content="Hack Club CSS Starter Template" />
   </head>
-
+</html>
