--- a/index.html
+++ b/index.html
@@ -4,5 +4,13 @@
     <meta charset="utf-8" />
     <title>Css testing</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka|Comfortaa">
   </head>
+
+  <style>
+    h1 {font-family: Fredoka;}
+  </style>
+
+
+  <h1>Gams</h1>
 </html>
