--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
   <style>
     h1 {font-family: Fredoka;}
+    p {font-family: Comfortaa;}
   </style>
 
 
-  <h1>Gams</h1>
+  <h1>Test</h1>
+  <p>Testing</p>
 </html>
